# ElecGen

./: .gitignore  .gitmodules  CMakeLists.txt  output.txt  readme.md
Auto_electronics/: gurobitest.sln
Auto_electronics/gurobitest/: gurobitest.aps  gurobitest.vcxproj  gurobitest.vcxproj.filters  model.lp  resource.h
Auto_electronics/gurobitest/Electronic_Components/BATTERY/: 6LR61.txt
Auto_electronics/gurobitest/Electronic_Components/DC_Motor/: Pololu_3052.txt  Pololu_3072.txt
Auto_electronics/gurobitest/Electronic_Components/MICRO_CONTROLLER/: Arduino_Mini.txt  Arduino_Uno.txt
Auto_electronics/gurobitest/Template/: component_structure.proto
Auto_electronics/gurobitest/header/: Matching.h  actuator.h  component_structure.pb.h  testfile.h  typefile.h  utility_functions.h  voltage_regulator_template.pb.h
Auto_electronics/gurobitest/matlab/: FinalSummary_09_10_lowtol.mat  compute_motor_parameter.m  motor_selection.m  test_script.m
Auto_electronics/gurobitest/src/: Inference.cpp  actuator.cpp  component_structure.pb.cc  main.cpp  readin.cpp  testfile.cpp  utility_functions.cpp
chrono_sim/: CMakeLists.txt  units.md
chrono_sim/include/: ChUrdfDoc.h  LeggedGaits.h  RobotController.h  SimMotor.h  SimulationManager.h
chrono_sim/src/: ChUrdfDoc.cpp  RobotController.cpp  SimMotor.cpp  SimulationManager.cpp  elec_gen.cpp  launch_simulation.cpp  mexRun.cpp  test_chrono.cpp  test_iteration.cpp  testcpp.cpp
cmake/: DLL_Copy_Command.cmake  FindGurobi.cmake  data_dir_path.h.in  elec_gen.m.in  urdfparser_cmakelists_patched.txt
data/Electronic_Components/BATTERY/: 85AAAHCB.txt  PR-CU-R198.txt
data/Electronic_Components/BLUETOOTH/: Bluefruit_UART.txt
data/Electronic_Components/H_BRIDGE/: DRV8838.txt
data/Electronic_Components/SERVO/: LS-S8220.txt
data/Electronic_Components/VOLTAGE_REGULATOR/: DC-DC_Convertor.txt
data/electronics/BATTERY/: 6LR61.txt  85AAAHCB.txt  D1604-1F.txt  LP503562.txt  PR-CU-R198.txt  Turnigy_20C.txt
data/electronics/BLUETOOTH/: Bluefruit_SPI.txt  Bluefruit_UART.txt
data/electronics/CAMERA/: MU_Vision_Sensor.txt  OV5642.txt  OV7670.txt  TTL_Serial_Camera.txt
data/electronics/DC_Motor/: Pololu_3050.txt  Pololu_3052.txt  Pololu_3055.txt  Pololu_3072.txt  Pololu_3074.txt  Pololu_4797.txt
data/electronics/ENCODER/: Pololu_3081.txt  Pololu_4761.txt
data/electronics/FORCE_SENSOR/: Pololu_1645.txt  Pololu_1695.txt  Pololu_1696.txt
data/electronics/H_BRIDGE/: DRV8835.txt  DRV8838.txt  MTD-01.txt  TA7291P.txt
data/electronics/MICRO_CONTROLLER/: Arduino_Due.txt  Arduino_Mega.txt  Arduino_Mini.txt  Arduino_Uno.txt
data/electronics/SERVO/: LS-0009AF.txt  LS-S8220.txt  ROB-11965.txt  SER0037.txt
data/electronics/VOLTAGE_REGULATOR/: DC-DC_Convertor.txt  L4931-33.txt
data/maps/: Note.txt  process_bmp.m  stair.urdf
data/robots/: fourleg.urdf  fourleg2.urdf  fourleg3.urdf  fourwheels.urdf  manipulator.urdf  threewheels.urdf
electronics/: CMakeLists.txt  README.txt
electronics/include/: Circuit.h  Inference.h  Matching.h  actuator.h  stdafx.h  testfile.h  typefile.h  utility_functions.h
electronics/proto/: CMakeLists.txt  component_structure.proto
electronics/src/: Circuit.cpp  Inference.cpp  Matching.cpp  actuator.cpp  main.cpp  stdafx.cpp  testfile.cpp  utility_functions.cpp
include/: ChUrdfDoc.h  RobotController.h  SimMotor.h  SimulationManager.h
robots/: fourleg.urdf  fourwheels.urdf  threewheels.urdf  triplebeam.urdf
src/: ChUrdfDoc.cpp  RobotController.cpp  SimMotor.cpp  SimulationManager.cpp  launch_simulation.cpp  test_iteration.cpp  testcpp.cpp
trajectory/: CMakeLists.txt  eigen_heightmap.cpp  eigen_heightmap.h  quadrupedal_kinematics.cpp  quadrupedal_kinematics.h  quadrupedal_model.h  traj_optimizer.cpp  traj_optimizer.h
ui/: UI.m  findIntersection.m  lineSegmentIntersect.m  loadURDF.m  projectOnHeightMap.m  readObj.m  reduceEdges.m  writeURDF.m
